--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby-plugin-resolve-src": "^2.1.0",
     "gatsby-plugin-sass": "^2.7.0",
     "gatsby-source-filesystem": "^2.7.0",
+    "gatsby-source-graphcms": "^2.0.0-next.12",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
